# ChatGIT

./: .gitignore  LICENSE  README.md  chatGIT.py  chatGIT2.py  config.ini  config.txt  gptAPI.ipynb  output.txt  pyproject.toml  sample_responses.py  setup.py  test.txt  trial1.ipynb
chatGIT/: __main__ .py  chatGIT.py  pyproject.toml
src/chatGIT/: chatGIT.py
