[build-system]
requires = ["setuptools>=61.0.0", 
"wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "chatGIT"
version = "0.0.1"
authors = [
  {name= "Andy Perez", email="perezandy2001@gmail.com"},
  {name= "Henry Perlstein",email = "henry.perlstein@icloud.com"},
  {name= "Derek Nelson",email = "Dereknelson93@gmail.com"},
  {name= "Awwab Azam",email = "awwabaliazam@gmail.com"},

]

description = "A ChatGPT powered assistant to aid in git command execution"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies =[
  "termcolor",
  "openai",
  "json",
  "sys",
  "subprocess",
  "re",
  "colorama"
]

[project.urls]
"Homepage" = "https://github.com/kaddu341/ChatGIT"





[project.scripts]
chatGIT = "chatGIT:main"